# lamaria

./: .gitignore  README.md  defaults.yaml  evaluate_wrt_control_points.py  evaluate_wrt_mps.py  evaluate_wrt_pgt.py  example_vi_optimization.py  pyproject.toml  quickstart.sh  requirements.txt  run_pipeline.py
.github/workflows/: formatting.yml
lamaria/: __init__.py
lamaria/config/: options.py  pipeline.py
lamaria/eval/: create_empty_recon_from_estimate.py  evo_evaluation.py  pgt_evaluation.py  sparse_evaluation.py
lamaria/pipeline/: estimate_to_timed_reconstruction.py  lamaria_reconstruction.py
lamaria/pipeline/data_init/: estimate_to_timed_reconstruction.py  mps_to_timed_reconstruction.py
lamaria/pipeline/keyframing/: keyframe_selection.py  to_colmap.py  to_lamaria_reconstruction.py  to_vi_reconstruction.py
lamaria/pipeline/optim/: callback.py  imu.py  iterative_global_ba.py  residual.py  session.py  triangulation.py  vi_optimization.py
lamaria/rig/: lamaria_reconstruction.py
lamaria/rig/builder/: vrs_to_colmap.py
lamaria/rig/config/: defaults.yaml  helpers.py  loaders.py  options.py  (+3 more)
lamaria/structs/: control_point.py  estimate.py  sparse_eval.py  sparse_eval_variables.py  timed_reconstruction.py  trajectory.py  vi_reconstruction.py
lamaria/utils/: aria.py  camera.py  constants.py  control_point.py  estimate.py  general.py  imu.py  metrics.py  sparse_eval.py  synchronization.py  timestamps.py  transformation.py  types.py  utils.py
scripts/: run_pipeline.py
scripts/rig/: test_vrs_to_colmap.py
tools/: asl_folder_to_rosbag.py  download_lamaria.py  undistort_asl_folder.py  vrs_to_asl_folder.py
(+16 files in other folders)
