[project]
name = "lamaria"
version = "0.1.0"
requires-python = ">=3.9,<3.15"
description = "LaMAria: Benchmarking Egocentric Visual-Inertial SLAM at City Scale"
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Homepage = "https://lamaria.ethz.ch"
Repository = "https://github.com/cvg/lamaria"
Issues = "https://github.com/cvg/lamaria/issues"

[tool.setuptools]
packages = ["lamaria"]

[tool.setuptools.package-data]
lamaria = [
  "assets/*",
  "**/*.yaml",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"